[package]
name = "toy_payment"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
smol_str = {version="0.3.2", features = ["serde"] }
tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync", "io-std", "time"] }
futures-util = "0.3"
anyhow = "1.0"
regex = "1.11.1"
tracing = "0.1"
tracing-subscriber = "0.3"
csv = "1.3.1"
rustc-hash = "2.1.0"

[profile.release]
codegen-units = 1
lto = "fat"
