[package]
name = "toy_payment"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
smol_str = {version="0.3.2", features = ["serde"] }
tokio = {version = "1", features = ["macros", "rt-multi-thread", "sync", "io-std", "time"] }
futures-util = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
csv = "1.3.1"
rustc-hash = "2.1.0"
clap = { version = "4.5.23", features = ["derive"] }
ahash = "0.8.11"
thiserror = "2.0.6"

[dev-dependencies]
assert_approx_eq = "1.1.0"

[profile.release]
codegen-units = 1
lto = "fat"
